# praxis

./: CMakeLists.txt  Makefile  command.c  command.h  config.h  http.c  main.c  mqtt.c  tokens.h
examples/auth/: config.h
examples/auth/public/: index.html
examples/blog/: Makefile  config.h  generate_index.sh  generate_latest.sh  generate_nav.sh  template.html  template.sh  template.shtml
examples/blog/entries/Markdown/cheatsheet/: cheatsheet.md
examples/blog/entries/Praxis/praxis/: praxis.md
examples/blog/public/: default.css
examples/mqtt/: config.h
